# BandhanAI

./: .env  .gitignore  README.md  example_env  example_mcp_config.json  frontend.py  graph.py  implementation_plan.md  langgraph.json  main.py  mcp_config.json  new-graph.py  nodes.py  prompts.py  pyproject.toml  requirements.txt  server.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_retry_counter.pckl
Frontend_Desgin/approval_modal/: code.html
Frontend_Desgin/bandhanai/: DESIGN.md
Frontend_Desgin/chat_with_agent_restored/: code.html
Frontend_Desgin/create_account_restored/: code.html
Frontend_Desgin/dashboard_restored/: code.html
Frontend_Desgin/login_with_social_auth_restored/: code.html
Frontend_Desgin/onboarding_agent_setup_restored/: code.html
Frontend_Desgin/onboarding_customer_import_restored/: code.html
Frontend_Desgin/settings_integrations_restored/: code.html
backend/: .gitignore  README.md  auth.py  config.py  encryption.py  example_env  frontend.py  graph.py  langgraph.json  main.py  oauth.py  prompts.py  pyproject.toml  requirements.txt  server.py  upload.py
backend/.langgraph_api/: .langgraph_ops.pckl
backend/app/csv/: __init__.py  ingestion.py  parser.py  routes.py  schema_detector.py  transformer.py
backend/migrations/: 001_tenants.sql  002_add_org_id.sql  003_customers.sql  004_csv_pipeline.sql
frontend/: package-lock.json  package.json  run.sh
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: use-auth.ts  use-campaigns.ts  use-chat.ts  use-websocket.ts
frontend/src/lib/: api.ts  supabase-server.ts
static/: index.html
(+21 files in other folders)
